small changes to css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -210,7 +210,8 @@
 //----- Twitter Feed -----//
 
 .next-to-twitter .post {
-  left: 5vw;
+  left: 15vw;
+  width: 58vw;
 }
 
 .next-to-twitter .video-post {
